--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^5.0.1",
     "express": "~4.15.5",
     "fs": "0.0.1-security",
     "htmlparser2": "^3.9.2",
